# meego_sdlcave

./: LICENSE  README  README.md  README.rst  sdlcave.desktop  sdlcave.pro
src/: Makefile.in  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  aclocal.m4  config.h.in  configure  configure.ac  main.cpp  sdlcave.c
src/debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  sdlcave-default.ex  sdlcave.doc-base.EX  watch.ex
